--- a/public/css/style.css
+++ b/public/css/style.css
@@ -72,17 +72,17 @@ h1, h2, h3, h4, h5, h6, .navbar-brand {
 
 /* BUAT CARD BERJALAN DI PAGE ABOUT :D */
 .ticker-wrapper {
-    overflow: hidden; /* Menyembunyikan bagian yang tidak terlihat */
+    overflow: hidden;
     position: relative;
 }
 
 .ticker {
     display: flex;
-    animation: scroll-left 10s linear infinite; /* Durasi bisa disesuaikan */
+    animation: scroll-left 15s linear infinite;
 }
 
 .card {
-    margin-right: 30px; /* Jarak antar card */
+    margin-right: 30px;
 }
 
 @keyframes scroll-left {
@@ -90,6 +90,6 @@ h1, h2, h3, h4, h5, h6, .navbar-brand {
         transform: translateX(0);
     }
     100% {
-        transform: translateX(-100%); /* Menggerakkan konten ke kiri setengah panjang konten */
+        transform: translateX(-100%);
     }
 }
